--- a/Battery Dispatch for Grid independence.ipynb
+++ b/Battery Dispatch for Grid independence.ipynb
@@ -1,14 +1,3 @@
-#This script is an optimization to maximize the energy that the battery charges and discharges for supplying energy to a load.
-
-import matplotlib.pyplot as plt
-from pulp import *
-
-# Load profile example 
-load = [32.0, 31.0, 32.0, 31.0, 31.0, 31.0, 38.5, 57.0, 76.0, 121.5, 171.0, 155.0, 117.5, 92.0, 90.0, 108.0, 96.5, 88.0, 78.0, 67.0, 48.0, 39.0, 34.0, 33.0]
-
-# Define the original battery size
-Max_energy=250 #É o ponto da curva da ultima figura onde não há mais ganho marginal na % em que a bateria abastece carga (ver mais abaixo). Can be C-Rate 1 or 0.5 o que daria uma capacidade de 500kWh
-Max_Power=250 # 
 {
  "cells": [
   {
@@ -18,10 +7,17 @@ Max_Power=250 #
    "metadata": {},
    "outputs": [],
    "source": [
+    "#This script is an optimization to maximize the energy that the battery charges and discharges for supplying energy to a load.\n",
+    "import matplotlib.pyplot as plt\n",
+    "from pulp import *\n",
+    "\n",
+    "# Load profile as an example\n",
+    "load = [32.0, 31.0, 32.0, 31.0, 31.0, 31.0, 38.5, 57.0, 76.0, 121.5, 171.0, 155.0, 117.5, 92.0, 90.0, 108.0, 96.5, 88.0, 78.0, 67.0, 48.0, 39.0, 34.0, 33.0]\n",
+    "\n",
     "# Define max and min of energy and power demanded by load\n",
     "# Define original battery size\n",
-    "Max_energy=500 #max_boxplotvalue*2 It attempts a C-Rate of 0.5 Max_Power/2 first as an example. But it will be changed according to the knee type chart analysis. The value to be chosen is the point of the curve i which there is no more marginal gains in the % in which the battery supplies the load\n",
-    "Max_power=250 #max_boxplotvalue. It the max value of the box_plot to be fulfilled\n",
+    "Max_energy=500 #It attempts a C-Rate of 0.5 But it will be changed according to the knee type chart analysis. The value to be chosen is the point of the curve i which there is no more marginal gains in the % in which the battery supplies the load\n",
+    "Max_power=250 \n",
     "\n",
     "print(\"Load Power Median Value in each Hours of a day:\", (load))\n",
     "\n",
@@ -56,7 +52,7 @@ Max_Power=250 #
     "# Objective function\n",
     "problem += lpSum(energy_in[hour] for hour in hours)\n",
     "\n",
-    "# Constraints at the beginning of that hour)\n",
+    "# Constraints at the beginning of each hour)\n",
     "for hour in hours:\n",
     "    if hour == 23:\n",
     "        problem += power_in[hour] == 0\n",
